@@ -5,7 +5,8 @@ Version 3.1.6 - DEV
  - Fix bug: don't show multiple balloons for a single problem solved.
  - Make all judging output binary in SQL to display non-UTF8 correctly.
  - Fix checktestdata debug print formatting.
- - Include a number of documentation improvements. 
+ - Include a number of documentation improvements.
+ - Fix bug in using va_copy macro with g++ on AMD 64bit.
 
 Version 3.1.5 - 25 January 2012
 -------------------------------
